<resources>
    <string name="app_name">TeleComm</string>
    <string name="homePageText">Start your Chatting in TeleComm\nIt is Free</string>
    <string name="homeScreenStartmsgBtnText">Start Messaging</string>
    <string name="phoneverifyText">Your Phone Number</string>
    <string name="phoneVerifyTextDesc">Please enter your mobile phone number</string>
    <string name="next">Next</string>
    <string name="otpverifyheading">OTP Verification</string>
    <string name="otpverifyBtnTxt">Verify</string>
    <string name="otpVerifyDesc">The OTP is send on </string>
    <string name="customDialogWarning">Dont do any operation</string>
    <string name="addDetailsHeadingWelcome">Welcome to TeleComm</string>
    <string name="account_created_AllDoneText">All Done!</string>
    <string name="account_created_Start_Chatting">Start Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="userListEmptyTxt">No User Found</string>
    <string name="chatActivitySignoutTxt">Sign Out</string>
    <string name="SendReceiveFragSendMsgHint">Type your message..</string>

    <string name="confirm">Confirm</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="ok">Ok</string>
    <string name="Cancel">Cancel</string>
</resources>