<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen">

    <androidx.cardview.widget.CardView
        android:id="@+id/homeScreenCard"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/mainColor"
        app:cardElevation="10dp"
        app:cardCornerRadius="75dp"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/homeScreenLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/fglogo"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/homeScreenAppNameTxt"
        android:layout_below="@id/homeScreenCard"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="?android:textColorPrimary"
        android:text="@string/app_name"/>
    <TextView
        android:id="@+id/homeScreenAppDesc"
        android:layout_below="@id/homeScreenAppNameTxt"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="?android:textColorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homePageText"/>

    <Button
        android:id="@+id/homeScreenStartMsgBtn"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonback"
        android:text="@string/homeScreenStartmsgBtnText"
        android:textAllCaps="false"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>